--- a/Project Euler/Files/Res/Storyboards/iPhone/MainStoryboard_iPhone.storyboard
+++ b/Project Euler/Files/Res/Storyboards/iPhone/MainStoryboard_iPhone.storyboard
@@ -728,6 +728,15 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Uses Recursion" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y9L-fU-9dD">
+                                <rect key="frame" x="5" y="518" width="84.666666666666671" height="15"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="15" id="cIa-Bd-k9a"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="11"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -746,6 +755,7 @@
                             <constraint firstItem="bFS-o8-Zlc" firstAttribute="trailing" secondItem="qIQ-XB-ApZ" secondAttribute="trailing" id="65x-zi-aZd"/>
                             <constraint firstItem="Ewd-cm-Ykd" firstAttribute="leading" secondItem="Qq1-jn-f9C" secondAttribute="leading" id="6uK-B3-jxE"/>
                             <constraint firstItem="24h-L5-Tf0" firstAttribute="width" secondItem="txf-We-Ad8" secondAttribute="width" id="6wO-0I-PS8"/>
+                            <constraint firstItem="y9L-fU-9dD" firstAttribute="leading" secondItem="vKG-Qr-etp" secondAttribute="leading" id="71x-Py-bwF"/>
                             <constraint firstItem="ak1-Za-YRE" firstAttribute="leading" secondItem="vKG-Qr-etp" secondAttribute="trailing" constant="10" id="7qt-PM-dKc"/>
                             <constraint firstItem="zxl-ng-3Sy" firstAttribute="width" relation="lessThanOrEqual" secondItem="dz8-ta-DFM" secondAttribute="width" id="8TK-Vd-LYw"/>
                             <constraint firstItem="zxl-ng-3Sy" firstAttribute="centerX" secondItem="dz8-ta-DFM" secondAttribute="centerX" id="9BF-0l-Lko"/>
@@ -802,6 +812,7 @@
                             <constraint firstItem="DHb-ba-bDJ" firstAttribute="centerX" secondItem="g8w-Vm-9j5" secondAttribute="centerX" id="SHH-Ql-e2J"/>
                             <constraint firstItem="txf-We-Ad8" firstAttribute="leading" secondItem="SBB-k3-NyB" secondAttribute="trailing" id="SiA-VP-ibQ"/>
                             <constraint firstItem="FE8-Kb-SuB" firstAttribute="top" secondItem="x8N-IM-4JX" secondAttribute="bottom" constant="5" id="V2e-pi-4ip"/>
+                            <constraint firstItem="y9L-fU-9dD" firstAttribute="centerY" secondItem="qnp-my-KxK" secondAttribute="centerY" id="VfM-XJ-Puk"/>
                             <constraint firstItem="kEh-1z-WXH" firstAttribute="leading" secondItem="tDt-QJ-Esk" secondAttribute="trailing" id="WfG-ke-nWJ"/>
                             <constraint firstItem="rL8-ei-bi7" firstAttribute="width" secondItem="24h-L5-Tf0" secondAttribute="width" id="Won-BE-xec"/>
                             <constraint firstItem="arC-iP-2qS" firstAttribute="trailing" secondItem="bFS-o8-Zlc" secondAttribute="trailing" id="XD6-Pr-rCA"/>
@@ -930,6 +941,7 @@
                         <outlet property="_questionUsesCustomStructsLabel" destination="mbe-8e-QRI" id="CED-D6-E2y"/>
                         <outlet property="_questionUsesFunctionalProgrammingLabel" destination="yAJ-Tw-fsw" id="EpJ-cl-ncc"/>
                         <outlet property="_questionUsesHelperMethodsLabel" destination="FfW-Xp-PXv" id="m8z-jZ-wGA"/>
+                        <outlet property="_questionUsesRecursionLabel" destination="y9L-fU-9dD" id="f6U-5q-Rkk"/>
                         <outlet property="_solutionLineCountLabel" destination="Ewd-cm-Ykd" id="f8A-K2-E5D"/>
                         <outlet property="_startedOnDateLabel" destination="SBB-k3-NyB" id="yEz-gY-5dC"/>
                     </connections>
